<resources>
    <string name="app_name">WeatherApp</string>
    <string name="zip_format">%1$s,US</string>
    <string name="temp_format">%1$d\u2109</string>
    <string name="temp_high">Hi</string>
    <string name="temp_low">Lo</string>
    <string name="wind_format">%1$d mph</string>
    <string name="wind_range_format">%1$d to %2$d mph</string>
    <string name="percent_format">%1$d%%</string>
    <string name="pressure_format">%1$d hPa</string>
    <string name="dialog_title">Please enter a zip code to update the forecast.</string>
    <string name="dialog_hint">Zip Code</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown error</string>

    <!--  Forecast Details Strings  -->
    <string name="forecast_label">Forecast</string>
    <string name="description_label">Description</string>
    <string name="temp_max_label">Temperature Max</string>
    <string name="temp_min_label">Temperature Min</string>
    <string name="wind_speed_label">Wind Speed</string>
    <string name="wind_gust_label">Wind Gust</string>
    <string name="wind_direction_label">Wind Direction</string>
    <string name="secondary_details_label">Secondary Details</string>
    <string name="humidity_label">Humidity</string>
    <string name="dew_point_label">Dew Point</string>
    <string name="pressure_label">Pressure</string>
    <string name="cloud_coverage_label">Cloud Coverage</string>
    <string name="precipitation_probability_label">Precipitation Chance</string>
    <string name="uv_label">UV Index</string>
</resources>